force-app/main/default/objects/Opportunity_Line_Amendment__c/Opportunity_Line_Amendment__c.object-meta.xml
<CustomObject>
    <label>Opportunity Line Amendment</label>
    <nameField>
        <displayFormat>OLIA-{0000000}</displayFormat>
        <label>Opportunity Line Amendment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Line Amendments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>