force-app/main/default/objects/Opportunity_Line_Amendment__c/fields/Amendment_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Line_Id__c</fullName>
    <label>Amendment Line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>