force-app/main/default/objects/Opportunity_Line_Amendment__c/fields/Amendment_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Amendment Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Line Amendments (Amendment Opportunity)</relationshipLabel>
    <relationshipName>Opportunity_Line_Amendments1</relationshipName>
    <type>Lookup</type>
</CustomField>