force-app/main/default/objects/Opportunity_Line_Amendment__c/fields/Renewal_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Line_Id__c</fullName>
    <label>Renewal Line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>