force-app/main/default/objects/Opportunity_Line_Amendment__c/fields/Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Line Amendments</relationshipLabel>
    <relationshipName>Opportunity_Line_Amendments</relationshipName>
    <type>Lookup</type>
</CustomField>